# federatedcode

./: .dockerignore  .readthedocs.yml  CHANGELOG.rst  Dockerfile  Makefile  README.rst  configure  configure.bat  docker-compose.yml  docker.env  pyproject-aboutcode.federatedcode.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: main.yml  pypi-release-aboutcode-federatedcode.yml  pypi-release.yml
aboutcode/: __init__.py
aboutcode/federatedcode/: CHANGELOG.rst  README.rst  __init__.py  cli.py
aboutcode/federatedcode/client/: __init__.py
aboutcode/federatedcode/contrib/django/: models.py  utils.py
aboutcode/federatedcode/tests/: test_client.py
docs/source/: conf.py  index.rst  introduction.rst  run-application.rst  tutorial_getting_started.rst  tutorial_remote_subscribe_package_update.rst
etc/nginx/conf.d/: default.conf
etc/postgresql/: postgresql.conf
fedcode/: activitypub.py  forms.py  importer.py  middleware.py  models.py  views.py
fedcode/management/commands/: federate.py  sync.py  tasks.py
fedcode/migrations/: 0003_remove_package_local_remove_person_local_and_more.py  0004_alter_vulnerability_unique_together.py  0005_remove_person_avatar.py
fedcode/pipelines/: __init__.py  sync_scancode_scans.py  sync_vulnerablecode.py
fedcode/pipes/: utils.py
fedcode/templates/: 403.html  404.html  500.html  admin_login.html  base.html  create_repository.html  footer.html  home.html  login.html  navbar.html  note.html  pkg_list.html  pkg_profile.html  repo_list.html  update_profile.html  user_profile.html  user_sign_up.html
fedcode/templatetags/: webfinger_image.py
federatedcode/: __init__.py  context_processors.py  settings.py  urls.py
federatedcode/static/: font-awesome.ABOUT
federatedcode/static/css/: custom.css
tests/: test_ap_api.py  test_utils.py  test_vocabulary_toap.py
tests/pipelines/: test_sync_vulnerablecode.py
