[metadata]
name = federatedcode
version=0.0.1
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = Share software metadata and vulnerabilities in a federated manner over ActivityPub and git
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/federatedcode

author = nexB Inc., AboutCode.org  and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    open source
    package
    dependency
    activitypub
    vulnerabilities
    security
    dependencies
    packages

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst

[options]
python_requires = >=3.10
packages=find:
include_package_data = true
zip_safe = false

install_requires =
    Django==5.1.2
    django-oauth-toolkit==3.0.1
    djangorestframework==3.15.2
    django-environ==0.11.2
    gunicorn==23.0.0
    GitPython==3.1.43
    requests==2.32.3
    httpx==0.28.1
    http-message-signatures==0.5.0
    attrs==24.2.0
    # Django ImageField
    pillow==11.0.0
    cryptography==44.0.0
    idna==3.10
    packageurl-python==0.16.0
    psycopg2-binary==2.9.10
    pytest==8.3.4
    pytest-django==4.9.0
    saneyaml==0.6.1
    
    # Schema
    django-ninja==1.3.0
    pydantic==2.10.3

    # Pipeline
    aboutcode.pipeline==0.2.0

    # aboutcode.federatedcode.client
    aboutcode.hashid==0.2.0
    python-dotenv==1.0.1
    click==8.1.7

[options.extras_require]
dev =
    # Validation
    flake8>=6.1.0
    black>=23.0.0
    isort>=5.12.0
    doc8>=0.11.2
    pydocstyle>=6.3.0
    # Security analyzer
    bandit>=1.7.5
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    twine>=6.0.1
    flot>=0.7.2
    # Debug
    django-debug-toolbar==4.2.0

docs =
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton
    sphinx-autobuild>=2021.3.14
    sphinxcontrib_django
    sphinx-jsonschema

[isort]
force_single_line = True
line_length = 88
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = lib,migrations,bin,data,Script,Lib,lib64,local,var,tmp,thirdparty,build,dist

[flake8]
max_line_length = 88
max_complexity = 10
exclude = lib,thirdparty,docs,bin,migrations,settings.py,data,var,build,dist
ignore = E203,W503

[pydocstyle]
ignore = D1,D203,D205,D212,D400,D415


